--- a/index.html
+++ b/index.html
@@ -2141,7 +2141,7 @@
                            blackPct >= filters.blackMin && blackPct <= filters.blackMax &&
                            hispanicPct >= filters.hispanicMin && hispanicPct <= filters.hispanicMax &&
                            asianPct >= filters.asianMin && asianPct <= filters.asianMax &&
-                           antitrumpPct >= filters.antitrumpMin && antitrumpPct <= filters.antitrumpMax
+                           antitrumpPct >= filters.antitrumpMin && antitrumpPct <= filters.antitrumpMax &&
                            demDonor>= filters.demDonorMin && demDonor <= filters.demDonorMax;
                 })
             };
